--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@ h2 {
 textarea {
   width: 100%;
   height: 600px;
-  font: 14px monospace;
+  tab-size: 4;
+  font: 14px Consolas, monospace;
 }
 
 section {
@@ -50,6 +51,7 @@ label {
   <h2>Output</h2>
   <textarea id="output" readonly></textarea>
 </section>
+<script src="textarea.js"></script>
 <script>
 
 function post(url, data, callback) {
@@ -88,7 +90,10 @@ function main() {
     }
   }
 
+  improveTextareaForCoding(input);
   input.value = localStorage.input || '';
+  input.selectionStart = 0;
+  input.selectionEnd = 0;
   minify.checked = localStorage.minify === 'true';
   mangle.checked = localStorage.mangle === 'true';
   input.oninput = compile;
